# breaking-chains

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: FABLE-REVIEW.md  acceptance-checklist.md  implementation-plan.md  kid-based-demos.md  perplexity-kids.md  perplexity.md  spec.md  value-based-demos.md
scripts/: smoke_openrouter.py  verify_acceptance.py
src/forge/: __init__.py  cli.py  config.py  exports.py  smoke_report.py
src/forge/application/: __init__.py  budgets.py  decisions.py  orchestrator.py  runtime.py  source_ingestion.py  specialists.py
src/forge/domain/: __init__.py  epistemics.py  identifiers.py  investigation.py
src/forge/gateways/: __init__.py  fake.py  model.py  openrouter.py
src/forge/roles/: __init__.py  (+6 more)
tests/contract/: test_connection_role.py  test_experiment_role.py  test_lead_role.py  test_model_gateway.py  test_openrouter.py  test_researcher_role.py  test_skeptic_role.py  test_synthesizer_role.py
tests/e2e/: test_acceptance.py  test_cli.py  test_streamlit.py  test_streamlit_accessibility.py
tests/fixtures/: inv_mass_question.md
tests/integration/: test_markdown_repository.py  test_orchestration_walking_skeleton.py  test_real_specialist_runner.py  test_rebuild_index.py  test_resume.py  test_source_consent.py  test_source_isolation.py  test_sqlite_projection.py
tests/unit/: test_budgets.py  test_config.py  test_decisions.py  test_epistemics.py  test_exports.py  test_investigation.py  test_smoke_report.py  test_trace.py  test_ui_services.py  test_view_models.py
(+12 files in other folders)
