[project]
name = "first-principles-forge"
version = "0.1.0"
description = "A first-principles discovery forge for traceable investigations."
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "pydantic",
    "pydantic-settings",
    "rich",
    "streamlit",
    "typer",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
